--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@
     padding: 0;
   
    /* background: radial-gradient(circle, rgb(247, 226, 235) 0%, rgb(240, 243, 247) 100%)/ */
-    background-color: rgb(241, 209, 198);
+    background-color: 
+
+    #5a5151;
+    color: aliceblue;
     
 }
